<resources>
    <string name="app_name">Puzzle 15</string>
    <string name="finish">Finish</string>
    <string name="restart">Restart</string>
    <string name="_25">25</string>
    <string name="score">Score</string>
    <string name="_00_12">00:12</string>
    <string name="time">Time</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_0">0</string>
    <string name="moves">Moves</string>
    <string name="puzzle_15">Puzzle 15</string>
    <string name="play_now">Play Now</string>
    <string name="you_win">You Win!</string>
    <string name="ok">OK</string>
    <string name="result">Your result</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="best">Best</string>
    <string name="empty">-</string>
    <string name="congratulation">Congratulations</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="statistics">Statistics</string>
    <string name="best_time">Best Time</string>
    <string name="best_moves">Best Moves</string>
    <string name="_96">96</string>
    <string name="top_3_results">Top 3 Results</string>
    <string name="share">Share</string>
    <string name="explanation">Explanation</string>
    <string name="info_game"><font> The 15 puzzle (also called Gem Puzzle, Boss Puzzle, Game of Fifteen, Mystic Square and many others) is a sliding puzzle having 15 square tiles numbered 1–15 in a frame that is 4 tiles high and 4 tiles wide, leaving one unoccupied tile position. Tiles in the same row or column of the open position can be moved by sliding them horizontally or vertically, respectively. The goal of the puzzle is to place the tiles in numerical order.  Named for the number of tiles in the frame, the 15 puzzle may also be called a 16 puzzle, alluding to its total tile capacity. Similar names are used for different sized variants of the 15 puzzle, such as the 8 puzzle that has 8 tiles in a 3×3 frame.</font></string>
</resources>