<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".ui.screens.StatisticsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/back_layout"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/circle_bg"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/ic_back" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilita_one_regular"
            android:text="@string/statistics"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/best_time_moves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/three_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_container">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginVertical="@dimen/margin_middle"
            android:layout_weight="1"
            android:background="@drawable/result_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lilita_one_regular"
                android:gravity="center"
                android:text="@string/best_time"
                android:textColor="@color/white"
                android:textSize="24dp"
                tools:ignore="SpUsage" />

            <Chronometer
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/lilita_one_regular"
                android:gravity="center"
                android:text="@string/_00_12"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginVertical="@dimen/margin_middle"
            android:layout_weight="1"
            android:background="@drawable/result_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lilita_one_regular"
                android:gravity="center"
                android:text="@string/best_moves"
                android:textColor="@color/white"
                android:textSize="24dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tv_moves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/lilita_one_regular"
                android:gravity="center"
                android:text="@string/_96"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/three_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/best_time_moves">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_three_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/margin_middle"
            android:fontFamily="@font/lilita_one_regular"
            android:text="@string/top_3_results"
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="bold"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginVertical="@dimen/margin_middle"
            android:layout_weight="1"
            android:background="@drawable/result_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/result_bg"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/moves"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tv_moves_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/_96"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/result_bg"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <Chronometer
                    android:id="@+id/tv_time_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/_00_12"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginVertical="@dimen/margin_middle"
            android:layout_weight="1"
            android:background="@drawable/result_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/result_bg"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/moves"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tv_moves_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/_96"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/result_bg"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <Chronometer
                    android:id="@+id/tv_time_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/_00_12"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginHorizontal="@dimen/margin_standard"
            android:layout_marginVertical="@dimen/margin_middle"
            android:layout_weight="1"
            android:background="@drawable/result_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/result_bg"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/moves"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <TextView
                    android:id="@+id/tv_moves_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/_96"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/result_bg"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    tools:ignore="SpUsage" />

                <Chronometer
                    android:id="@+id/tv_time_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lilita_one_regular"
                    android:text="@string/_00_12"
                    android:textColor="@color/white"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>